fixed overlapping viewport height

--- a/src/components/homepage/About.module.css
+++ b/src/components/homepage/About.module.css
@@ -26,8 +26,8 @@
 }
 
 .flexContainer {
-    width:100vw;
-    height:100vh;
+    /* height:100vh; */
+    max-height: 100%;
     display: flex;
     align-items: center;
     justify-content: space-around;
