--- a/src/components/homepage/Header.module.css
+++ b/src/components/homepage/Header.module.css
@@ -4,10 +4,6 @@
     display: inline-block;
 }
 
-.image {
-    margin-left: 4rem;
-    height: 400px;
-}
 
 .title {
     font-size: 5rem;    
@@ -26,6 +22,7 @@
 
 .flex-container {
     height: 100vh;
+    max-height: 100%;
     display: flex;
     flex-direction: row-reverse;
     justify-content:center;
